tests/conformance/valid/page_table_document.plk
P1 page_table_document () => R0[:32.16]
2[:32.16] => Z1[:32.16]
3[:32.16] => Z2[:32.16]
PAGE
V|1   2   0
S|32.16 32.16 32.16
|A + B => R
ENDPAGE
END
