tests/conformance/invalid/bad_relation_domain_schema.plk
P1 bad_relation_domain_schema () => R0[:32.0]
list_new() => Z0[:L32.0]
pair(1[:32.0], 2[:32.0]) => Z1[:P32.0]
list_push(Z0[:L32.0], Z1[:P32.0]) => Z0[:L32.0]
record_new() => Z2[:Q32.0]
pair(Z2[:Q32.0], 3[:32.0]) => Z3[:P32.0]
list_push(Z0[:L32.0], Z3[:P32.0]) => Z0[:L32.0]
list_len(Z0[:L32.0]) => R0[:32.0]
END
